# curium

./: Cargo.toml  LICENSE  README.md  profile.coz
codegen/: build.rs
data/: ptable.json
notebooks/: basis_funcs.ipynb  interatomic_distance.ipynb
proptest-regressions/: lattice.txt  spacegroupdata.txt
src/: algebra.rs  components.rs  constants.rs  element.rs  frac.rs  fract.rs  geometry.rs  group_classes.rs  hall.rs  hermann_mauguin.rs  isometry.rs  lattice.rs  lib.rs  main.rs  markup.rs  parsing.rs  spacegroupdata.rs  symbols.rs  symmop.rs  units.rs  voronoi.rs
