[package]
name = "curium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "*"
phf = { version = "0.11", features = ["macros"] }
# Use the num_traits version from nalgebra
num-traits = "*"
simba = "*"
approx = "*"
thiserror = "1.0.56"

[dev-dependencies]
pretty_assertions = "1.4.0"
