[package]
name = "curium"
version = "0.1.0"
edition = "2021"
build = "codegen/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "*"
phf = { version = "0.11", features = ["macros"] }
# Use the num_traits version from nalgebra
num-traits = "*"
simba = "*"
thiserror = "1.0.56"
uom = "0.35.0"
approx = "*"
fortuples = "0.9.1"
either = "1.9.0"
tabled = "0.15"
nom = "7"
coz = "0.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
proptest = "1.0.0"
proptest-derive = "0.2.0"


[build-dependencies]
serde = "1.0.195"
csv = "1.3.0"
phf = { version = "0.11", features = ["macros"] }
serde_json = "1.0"

[profile.release]
debug = 1
